# python-project-52

./: .coverage  .env  .exampleEnv  Makefile  README.md  coverage.xml  pyproject.toml  sqldata.json
.github/workflows/: test-coverage.yml
static/: index.css
task_manager/: forms.py  mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_labels.json  test_statuses.json  test_tasks.json  test_users.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_date_create_alter_label_name.py
task_manager/labels/tests/: test_model.py  test_views.py
task_manager/static/: index.css
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_rename_time_create_status_date_create_and_more.py  0003_alter_status_date_create_alter_status_name.py  0003_rename_status_name_status_name.py
task_manager/statuses/tests/: test_models.py  test_views.py
task_manager/tags/: models.py
task_manager/tags/migrations/: 0001_initial.py  0002_label.py  0003_delete_tag.py  0004_remove_label_date_update.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_executor_alter_task_labels.py  0003_alter_task_name.py  0004_alter_task_author_alter_task_date_create_and_more.py  0004_alter_task_labels.py  0005_alter_task_description_alter_task_executor_and_more.py  0006_remove_task_date_update.py
task_manager/tasks/tests/: test_filter.py  test_models.py  test_views.py
task_manager/templates/: base.html  common_create_update.html  common_delete.html  index.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: index.html  task_card.html
task_manager/templates/users/: delete.html  index.html  login.html
task_manager/users/: admin.py  apps.py  forms.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_models.py  test_views.py
(+2 files in other folders)
