[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Matvei Khmyzov <matw.hmizov@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
whitenoise = "^6.4.0"
django-extensions = "^3.2.1"
django-widget-tweaks = "^1.4.12"
coverage = "^7.2.2"
psycopg2-binary = "^2.9.5"
django-filter = "^23.1"
rollbar = "^0.16.3"
dj-database-url = "0.5.0"
flake8 = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
